Fixed content from jumping
Removed javascript function and added a permanent sticky position. Also narrowed the main content to be 80% of the total screen width

--- a/style.css
+++ b/style.css
@@ -195,10 +195,12 @@
 
 .content {
   padding: 16px;
+  margin-left: 10%;
+  margin-right: 10%;
 }
 
 .sticky {
-  position: fixed;
+  position: sticky;
   top: 0;
   width: 100%;
   z-index: 1;
